// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CodeExample> renders with a highlight that breaks in the middle of multiple lines 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <mock-codeblock>
        Line 1
        <br />
        Line 2 
        <span
          class="highlight"
        >
          HIGHLIGHT
          <br />
          HERE
        </span>
        Line 3
        <br />
        Line 4
      </mock-codeblock>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with a highlight that spans multiple lines 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <mock-codeblock>
        Line 1
        <br />
        <span
          class="highlight"
        >
          Line 2
          <br />
          Line 3
        </span>
        <br />
        Line 4
      </mock-codeblock>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with a line breaks and a highlighted line 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <mock-codeblock>
        Line 1
        <br />
        <span
          class="highlight"
        >
          Line 2
        </span>
        <br />
        Line 3
      </mock-codeblock>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with a single line break 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <mock-codeblock>
        Line 1
        <br />
        Line 2
      </mock-codeblock>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with empty highlighted region 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <mock-codeblock>
        Empty 
        <span
          class="highlight"
        />
         highlight
      </mock-codeblock>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with many highlighted regions 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <mock-codeblock>
        With 
        <span
          class="highlight"
        >
          quite
        </span>
         a 
        <span
          class="highlight"
        >
          number
        </span>
         of 
        <span
          class="highlight"
        >
          highlights
        </span>
        .
      </mock-codeblock>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with no highlighted region 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <mock-codeblock>
        No highlight
      </mock-codeblock>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with no title 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <mock-codeblock>
        code
      </mock-codeblock>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with one highlighted region 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <mock-codeblock>
        One 
        <span
          class="highlight"
        >
          single
        </span>
         highlight
      </mock-codeblock>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with title 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-title"
    >
      <h4>
        title
      </h4>
    </div>
    <div
      class="code-example-code"
    >
      <mock-codeblock>
        code
      </mock-codeblock>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with unterminated highlighted region 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <mock-codeblock>
        One 
        <span
          class="highlight"
        >
          unterminated highlight
        </span>
      </mock-codeblock>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders highlight and multiple line breaks using \\r\\n 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <mock-codeblock>
        Line 1
        <br />
        Line 2 
        <span
          class="highlight"
        >
          HIGHLIGHT
          <br />
          HERE
        </span>
        Line 3
        <br />
        Line 4
      </mock-codeblock>
    </div>
  </div>
</DocumentFragment>
`;
